# importador_app

./: .gitignore  app.py  build.py  config.json  install_hooks.py  launcher.py  logger.py  pre-commit  pyproject.toml  requirements.txt  scheduler_runner.py  setup_venv.py  update.json  updater.py
configs/: app.json  update.json
import_data/: config.py  config_loader.py  routes.py
import_data/services/: auth.py  connections.py  loader.py  schedules.py  transformations.py  validator.py
import_data/sql_scripts/: extra_sql.py  update_dim_cr.sql
static/css/: import_data.css
static/js/: import_data.js
templates/: agendamentos.html  conexoes.html  index.html  sem_acesso.html
