[tool.poetry]
name = "importador-app"
version = "1.0.3"
description = "Importador de dados local"
authors = ["Edilson Porto <edilson.porto@aec.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
    python = ">=3.13"
    flask = ">=3.1.3,<4.0.0"
    pandas = ">=3.0.3,<4.0.0"
    pyodbc = ">=5.3.0,<6.0.0"
    waitress = ">=3.0.2,<4.0.0"
    openpyxl = ">=3.1.5,<4.0.0"
    numpy = ">=2.4.3,<3.0.0"
    werkzeug = ">=3.1.6,<4.0.0"
    python-dateutil = ">=2.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"